# Breakpoint

./: .gitignore  Breakpoint.sln  CMakeLists.txt  README.md  fesefsefse
app/: app.txt  imgui.ini
src/: Breakpoint.vcxproj  DeviceResources.h  main.cpp  main.h  pch.h
src/D3D/: ComputePipeline.cpp  ComputePipeline.h  DXContext.cpp  DXContext.h  DescriptorHeap.cpp  DescriptorHeap.h  IndexBuffer.cpp  IndexBuffer.h  ModelMatrixBuffer.cpp  ModelMatrixBuffer.h  RenderPipeline.cpp  RenderPipeline.h  RenderPipelineHelper.h  StructuredBuffer.cpp  StructuredBuffer.h  VertexBuffer.cpp  VertexBuffer.h
src/D3D/Pipeline/: ComputePipeline.cpp  ComputePipeline.h  MeshPipeline.cpp  MeshPipeline.h  Pipeline.cpp  Pipeline.h  RenderPipeline.cpp  RenderPipeline.h
src/Debug/: DebugLayer.cpp  DebugLayer.h
src/DebugLayer/: DebugLayer.cpp  DebugLayer.h
src/ImGUI/: ImGUIHelper.h
src/ImGUI/backends/: imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_win32.cpp  imgui_impl_win32.h
src/ImGUI/misc/cpp/: imgui_stdlib.cpp
src/PBD/: particles.h
src/Scene/: Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  FluidScene.cpp  FluidScene.h  Geometry.cpp  Geometry.h  Mesh.cpp  Mesh.h  ObjectScene.cpp  ObjectScene.h  PBD.h  PBDScene.cpp  PBMPMScene.cpp  PBMPMScene.h  PhysicsScene.cpp  PhysicsScene.h  Scene.cpp  Scene.h
src/Shaders/: GramSchmidtConstraint.hlsl  InstancedVertexShader.hlsl  MeshShader.hlsl  PBDposition.hlsl  PhysicsVertexShader.hlsl  PixelShader.hlsl  RootSignature.hlsl  VelocityUpdate.hlsl  VertexShader.hlsl  VoxelFaceConstraint.hlsl  VoxelPixel.hlsl  VoxelVertice.hlsl  basic_2d_frag.hlsl  basic_2d_vert.hlsl  bufferClearComputeShader.hlsl  bufferClearRootSignature.hlsl  constants.h  root_signature.hlsl  voxelization.hlsl
src/Shaders/BouncingPhysicsShaders/: FaceToFaceConstraint.hlsl  Gram-SchmidtConstraint.hlsl  Gram-SchmidtRootSignature.hlsl  PhysicsRootSignature.hlsl  PhysicsVertexShader.hlsl  TestComputeRootSignature.hlsl  TestComputeShader.hlsl  VelocitySignature.hlsl  VelocityUpdate.hlsl  applyForce.hlsl
src/Shaders/ComputeShaders/: TestComputeRootSignature.hlsl  TestComputeShader.hlsl  TestRootSignature.hlsl  VelocitySignature.hlsl  VelocityUpdate.hlsl  applyForce.hlsl
src/Shaders/FluidSurfaceConstruction/: BilevelUniformGrid.hlsl  BilevelUniformGridRootSig.hlsl  DispatchArgDivide.hlsl  DispatchArgDivideRootSig.hlsl  FluidMeshRootSig.hlsl  FluidMeshShader.hlsl  FluidSurfaceShader.hlsl  MarchingCubesTables.hlsl  SurfaceBlockDetection.hlsl  SurfaceBlockDetectionRootSig.hlsl  SurfaceCellDetection.hlsl  SurfaceCellDetectionRootSig.hlsl  SurfaceVertexCompaction.hlsl  SurfaceVertexCompactionRootSig.hlsl  SurfaceVertexDensity.hlsl  SurfaceVertexDensityRootSig.hlsl  SurfaceVertexNormals.hlsl  SurfaceVertexNormalsRootSig.hlsl  utils.hlsl
src/Shaders/pbmpmShaders/: PBMPMCommon.hlsl  PBMPMComputeRootSignature.hlsl  PBMPMComputeShader.hlsl  PBMPMVertexRootSignature.hlsl  PBMPMVertexShader.hlsl
src/Shaders/pbmpmShaders/bukkitAllocateShaders/: bukkitAllocateComputeShader.hlsl  bukkitAllocateRootSignature.hlsl
src/Shaders/pbmpmShaders/bukkitCountShaders/: bukkitCountComputeShader.hlsl  bukkitCountRootSignature.hlsl
src/Shaders/pbmpmShaders/bukkitInsertShaders/: bukkitInsertComputeShader.hlsl  bukkitInsertRootSignature.hlsl
src/Shaders/pbmpmShaders/g2p2gShaders/: g2p2gComputeShader.hlsl  g2p2gRootSignature.hlsl
src/Shaders/pbmpmShaders/particleEmitShaders/: particleEmitComputeShader.hlsl  particleEmitRootSignature.hlsl  setIndirectArgsComputeShader.hlsl  setIndirectArgsRootSignature.hlsl
src/Support/: AlembicLoader.cpp  AlembicLoader.h  Shader.cpp  Shader.h  WinInclude.h  Window.cpp  Window.h  pch.h
src/includes/: d3dx12.h
